<resources>
    <string name="app_name">TheCocktailsApp</string>
    <string name="tv_text_drink_name">Drink name</string>
    <string name="iv_content_description_cocktail_picture">Cocktail picture</string>
    <string name="ib_content_description_star_button">Star button</string>
    <string name="tv_text_measure">measure</string>
    <string name="tv_text_ingredient">ingredient</string>
    <string name="tv_text_bullet">•</string>
    <string name="tv_text_ingredients">Ingredients</string>
    <string name="tv_text_instructions">Instructions</string>
    <string name="mi_title_home">Home</string>
    <string name="mi_title_filter">Non Alcoholic</string>
    <string name="mi_title_favorites">Favorites</string>
    <string name="tv_text_filters">Filters</string>
    <string name="tv_text_category">Category</string>
    <string name="tv_text_glass">Glass</string>
    <string name="tv_text_alcoholic">Alcoholic</string>
    <string name="tv_text_non_alcoholic_cocktails">Non-Alcoholic Cocktails</string>
</resources>